# mailchimp-to-gdrive

./: Cargo.toml  README.md
src/: drive.rs  error.rs  main.rs  options.rs  structures.rs
